--- a/PROYECTO-MJC memoorize/juegos/rompecabeza/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/rompecabeza/css/style.css
@@ -15,3 +15,52 @@ h3{
     margin:3px 0px;
     text-align:center;
 }
+/* Estilos para el fondo del modal (oscurecido) */
+.modal-background {
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro */
+    z-index: 1;
+  }
+
+  /* Estilos para el contenido del modal */
+  .modal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+  }
+
+  /* Estilos para el botón de cerrar */
+  .close-button {
+    background-color: #ff5e5e;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+
+  .close-button:hover {
+    background-color: #ff4a4a;
+  }
+
+  /* Botón de abrir modal */
+  .open-modal {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+
+  .open-modal:hover {
+    background-color: #45a049;
+  }
