--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
@@ -20,7 +20,6 @@ body{
     width: 800px;
     height: 600px;
     margin: auto;
-    margin-top: 2vh;
     border-radius: 15px;
 }
 .main-container{
@@ -114,7 +113,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .pistas{
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 10px;
     width: 250px;
