--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
@@ -113,7 +113,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .pistas{
-    display: none;
+    display: flex;
     flex-direction: column;
     gap: 10px;
     width: 250px;
