--- a/PROYECTO-MJC memoorize/login/src/css/style.css
+++ b/PROYECTO-MJC memoorize/login/src/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../img/fondo4.gif);
+    background-image: url(../../../img/fondo4.gif);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -24,7 +24,7 @@ body{
     width: 40%;
     height: auto;
     border-radius: 30px;
-    background-image: url(../../img/fondo-acuarela-dia-mundial-oceanos_23-2149391657.png);
+    background-image: url(../../../img/fondo-acuarela-dia-mundial-oceanos_23-2149391657.png);
     background-color: rgba(240, 248, 255, 0.541);
     background-repeat: no-repeat;
     background-position: center;
