--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -1,13 +1,12 @@
-body {
+body{
     background-image: url(../../img/fondo4.gif);
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; 
+    background-attachment: fixed;
     overflow: hidden;
+    height: 100vh;
+    margin: 0;
 }
-
 .contenido {
     flex: 1; 
     padding: 20px;
@@ -34,6 +33,18 @@ body {
     margin: 0 5px; 
     transition: transform 200ms;
 }
+.menu-title {
+    font-family: 'Lobster', cursive; 
+    margin-bottom: 100px;
+    padding: 0%;
+    min-height: 0vh;
+    font-size: 55px;
+    top: 0%;
+    color: #333;
+    background-image: url(../../img/fondo-acuarela-dia-mundial-oceanos_23-2149391657.png);
+    text-align: center;
+    
+}
 nav.navbar {
     display: flex;
     justify-content: space-around;
@@ -41,8 +52,7 @@ nav.navbar {
     width: 100%;
 }
 .navbar-expand {
-    background-image: url(../../img/view-underwater-sea-life-cartoon-style.jpg);
-    background-position: center;
+    background-image: url(../../img/fondo-acuarela-dia-mundial-oceanos_23-2149391657.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -361,20 +371,14 @@ nav {
 }
 .game-menu {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 0px;
 }
-
-.menu-title {
-    font-size: 36px;
-    color: #333;
-    margin-bottom: 180px;
-}
-
 .games-container {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 10px;
+    margin-top: 10%;
 }
 @keyframes gameVertical {
     0% { transform: translateY(0); }
@@ -386,30 +390,38 @@ nav {
     background-size: cover;
     background-repeat: no-repeat; 
     background-position: center;
+    text-decoration: none; 
+    color: inherit;
     color: rgb(0, 0, 0);
     flex-direction: row;
     border: none;
     border-radius: 5px;
     font-size: 18px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s, transform 0.3s;
 }
 
 .play-button:hover {
     background-color: #0056b3;
+    transform: translateY(-3px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
 }
 .game-description {
     font-size: 14px;
     color: #333;
     text-align: center;
-    background-image: url(../../img/fondo-acuarela-dia-mundial-oceanos_23-2149391657.png);
+    background-image: url(../../img/fondo-acuarela-dia-mundial-oceanos_23-2149391657.png);  
     background-size: cover;
     background-repeat: no-repeat; 
     background-position: center;
+    padding: 10px;
+    border-radius: 5px;
     line-height: 1.4;
+    width: 200%;
     font-size: 18px;
-    opacity: 0; /* La descripción estará oculta */
-    transition: opacity 0.3s ease; /* Transición suave */
+    opacity: 0; 
+    transition: opacity 0.3s ease; 
     margin-top: 10px;
 }
 
@@ -427,7 +439,7 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; 
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
     width: 200px; 
 }
@@ -436,25 +448,36 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; 
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
     width: 200px; 
 }
+
 .game-option3 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; 
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
     width: 200px; 
 }
 .game-image {
-    width: 150px; 
-    height: auto; 
-    margin-bottom: 10px; 
+    width: 200px;
+    height: auto;
+    position: relative;
+    animation: glitch 1s infinite;
+    margin-top: -30px;
     animation: gameVertical 2s infinite alternate ease-in-out;
+    transition: transform 200ms ease-in-out, box-shadow 200ms ease-in-out;
 }
+
+.game-image:hover {
+    animation-play-state: paused;
+    transform: scale(1.05);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
 
 @media (max-width: 768px) {
     #playButton {
@@ -465,7 +488,7 @@ nav {
     #playButton2 {
         flex-direction: column;
         margin-bottom: 5px;
-        margin-right: 90%;
+        margin-right: 100%;
     }
     #playButton2 p {
         font-size: 14px;
@@ -479,6 +502,14 @@ nav {
     #playButton p {
         font-size: 14px;
         margin-top: 5px;
+    }
+    .playButton {
+        display: flex;
+        flex-direction: row; 
+        align-items: center; 
+        justify-content: center; 
+        margin-bottom: 5px;
+        margin-left: 0; 
     }
     #musicButton {
         width: 40px;
@@ -505,48 +536,54 @@ nav {
         margin-top: 2px;
     }
     .menu-title {
-        font-size: 28px;
-        color: #333;
-        margin-bottom: 10px;
+        font-size: 40px;
+        margin-bottom: -20px;
+        margin-right: 0%;
     }
     .game-image {
-        width: 80px;
+        width: 120px;
         height: auto;
-        margin-bottom: 8px;
+        margin-top: -5px;
     }
     .game-option {
         display: flex;
-        flex-direction: row;
+        flex-direction: row; 
         align-items: center;
         justify-content: flex-start;
-        margin: 15px;
-        margin-right: 80%;
+        margin: 0px;
+        margin-right: 90%;
+        margin-bottom: 10%;
         padding: 10px;
-        width: 90%; 
+        width: 40%; 
     }
     .game-option2 {
         display: flex;
-        flex-direction: row;
+        flex-direction: row; 
         align-items: center;
         justify-content: flex-start;
-        margin: 20px;
+        margin: 0px;
         padding: 10px;
-        width: 90px; 
-        margin-top: -50px;
-        margin-right: 80%;
+        width: 40%; 
+        margin-top: -16%;
+        margin-right: 90%;
     }
     .game-option3 {
         display: flex;
-        flex-direction: row;
+        flex-direction: row; 
         align-items: center;
         justify-content: flex-start;
-        margin: 20px;
+        margin: 0px;
         padding: 10px;
-        width: 90px; 
-        margin-top: -70px;
-        margin-right: 80%;
+        width: 40%; 
+        margin-top: -0%;
+        margin-right: 90%;
     }
     .game-description {
-        flex-direction: row;
+        display: flex;
+        flex-direction: column; 
+        align-items: center;
+        margin: 25px;
+        margin-right: 0%; 
     }
+    
 }
