--- a/PROYECTO-MJC memoorize/css/style.css
+++ b/PROYECTO-MJC memoorize/css/style.css
@@ -4,8 +4,18 @@ body {
     background-size: cover;
     background-attachment: fixed;
     overflow: hidden;
+    animation: puffIn 1s ease-in-out
 }
-
+@keyframes puffIn {
+    0% {
+        opacity: 0;
+        transform: scale(2);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
 .container-fluid {
     display: flex; 
     flex-direction: column; 
