--- a/PROYECTO-MJC memoorize/interfaz/styles.css
+++ b/PROYECTO-MJC memoorize/interfaz/styles.css
@@ -2,12 +2,23 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: url('../img/fondo4.gif  ') no-repeat center center fixed;
+    background: url('../img/fondo4.gif') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    animation: puffIn 1s ease-in-out
+}
+@keyframes puffIn {
+    0% {
+        opacity: 0;
+        transform: scale(2);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 .container {
     display: flex;
